Add starting code with functioning PWM

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,29 @@
 # Debug files
 *.dSYM/
 *.su
+
+# Keil uVision Projects
+*.axf
+*.htm
+*.Inp
+*.map
+*.tra
+*.dep
+*.__i
+*.crf
+*.d
+*.o
+*.lst
+*.lnp
+*.bak
+*.Vishwas
+*.bin
+*.fed
+*._2i
+*.l1p
+*.l2p
+*.iex
+.#*
+*.uvgui.*
+*.uvopt
+
